--- a/examples/default/package.json
+++ b/examples/default/package.json
@@ -1,14 +1,12 @@
 {
   "name": "default",
-  "description": "Patch.js for webpack demo",
+  "description": "Patch.js for webpack Demo",
   "version": "0.0.9",
   "author": {
-    "name": "hl103499",
-    "email": "hl103499@koubei.com"
+    "name": "yulongheli"
   },
   "keywords": [
     "patchjs-webpack-plugin",
-    "patch-build",
     "patch",
     "patchjs"
   ],
@@ -21,11 +19,7 @@
     "build": "webpack",
     "server": "NODE_ENV=dev webpack-dev-server --inline false --content-base ./"
   },
-  "publishConfig": {
-    "registry": "http://registry.npm.alibaba-inc.com"
-  },
   "devDependencies": {
-    "@alipay/patchjs-webpack-plugin": "^0.1.2",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "style-loader": "^0.16.1",
