--- a/examples/webpack1.x/package.json
+++ b/examples/webpack1.x/package.json
@@ -3,12 +3,10 @@
   "description": "Patch.js for webpack 1.x demo",
   "version": "0.0.9",
   "author": {
-    "name": "hl103499",
-    "email": "hl103499@koubei.com"
+    "name": "yulongheli"
   },
   "keywords": [
     "patchjs-webpack-plugin",
-    "patch-build",
     "patch",
     "patchjs"
   ],
@@ -23,11 +21,7 @@
     "build": "webpack",
     "server": "NODE_ENV=dev webpack-dev-server --inline false --content-base ./"
   },
-  "publishConfig": {
-    "registry": "http://registry.npm.alibaba-inc.com"
-  },
   "devDependencies": {
-    "@alipay/patchjs-webpack-plugin": "^0.1.4",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "~1.0.1",
     "style-loader": "^0.16.1",
