--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
   },
   "keywords": [
     "patchjs-webpack-plugin",
-    "patch-build",
+    "performance",
+    "optimization",
     "patch",
     "patchjs"
   ],
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/patchjs/patchjs-webpack-plugin.git"
+  },
+  "license": "MIT",
   "dependencies": {
-    "patch-diff": "^0.1.0",
+    "patchjs-diff": "^0.1.0",
     "babel-runtime": "^6.23.0",
     "cli-table": "^0.2.0",
     "co": "^4.6.0",
@@ -31,9 +37,6 @@
     "test": "mocha test --require babel-register",
     "prepublish": "npm run build",
     "precommit": "npm run lint & npm run test"
-  },
-  "publishConfig": {
-    "registry": "http://registry.npm.alibaba-inc.com"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
