--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "patchjs-webpack-plugin",
   "description": "Patch.js for webpack",
-  "version": "0.1.3",
+  "version": "0.1.4beta",
   "author": {
     "name": "yulongheli"
   },
@@ -12,9 +12,9 @@
     "patch",
     "patchjs"
   ],
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/patchjs/patchjs-webpack-plugin.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/patchjs/patchjs-webpack-plugin.git"
   },
   "license": "MIT",
   "dependencies": {
@@ -23,8 +23,7 @@
     "cli-table": "^0.2.0",
     "co": "^4.6.0",
     "colors": "^0.6.2",
-    "urllib": "^2.21.2",
-    "async": "^2.4.0"
+    "urllib": "^2.21.2"
   },
   "main": "./dist/index.js",
   "engines": {
@@ -39,6 +38,7 @@
     "precommit": "npm run lint & npm run test"
   },
   "devDependencies": {
+    "async": "^2.6.1",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -49,7 +49,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
     "expect.js": "^0.3.1",
-    "mocha": "^3.2.0",
-    "husky": "^0.14.3"
+    "husky": "^0.14.3",
+    "mocha": "^3.2.0"
   }
 }
