--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "patchjs-webpack-plugin",
   "description": "Patch.js for webpack",
-  "version": "0.1.4",
+  "version": "0.1.6beta",
   "author": {
     "name": "yulongheli"
   },
