--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "patchjs-webpack-plugin",
   "description": "Patch.js for webpack",
-  "version": "0.1.9",
+  "version": "0.1.10-beta",
   "author": {
     "name": "yulongheli"
   },
@@ -18,8 +18,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "patchjs-diff": "^0.1.0",
-    "babel-runtime": "^6.23.0",
+    "patchjs-diff": "^0.1.1",
+    "@babel/runtime": "^7.0.0",
     "cli-table": "^0.2.0",
     "co": "^4.6.0",
     "colors": "^0.6.2",
@@ -31,25 +31,26 @@
   },
   "preferGlobal": false,
   "scripts": {
-    "build": "babel src --presets babel-preset-es2015 --out-dir dist",
+    "build": "babel src --presets @babel/preset-env --out-dir dist",
     "lint": "eslint src --ext .js",
-    "test": "mocha test --require babel-register",
+    "test": "mocha test --require @babel/register",
     "prepublish": "npm run build",
     "precommit": "npm run lint & npm run test"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "async": "^2.6.1",
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-register": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^7.1.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
     "expect.js": "^0.3.1",
     "husky": "^0.14.3",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "webpack": "^4.26.0"
   }
 }
